fix: side menu fixed: menu automatically scrolls top when page is scrolled top; menu automatically scrolls bottom when footer is reached; fixed flickering when menu gets fixed position in Safari

--- a/_sass/components/aside-menu.scss
+++ b/_sass/components/aside-menu.scss
@@ -180,7 +180,11 @@ body{
       @media (min-width: 1200px) {
         position: fixed;
         top: 0;
-        width: 21%;
+        width: 20%;
+        &:not(.below-footer){
+          left: inherit;
+          padding-left: inherit;
+        }
       }
     }
     @media #{$max-1200}{
